# workshop

./: .gitignore  readme.md
ap/: readme.md
ap/codeforces/: .gitignore  contest1082a.cc  contest1082b.cc  contest1088a.cc  contest1088b.cc  contest1133a.cc  contest1138a.cc  tr1574a.java  training0004a.cc  training0007a.cc  training0103a.cc  training0174a.cc  training0175a.cc  training0175b.cc  training0189a.cc  training0203a.cc  training0208a.cc  training0230b.cc  training0270a.cc  training0298a.cc  training0466a.cc  training0466b.cc  training0474b.cc  training0500a.cc  training0825a.cc  training0895a.cc  training0957a.cc  training0996a.cc  training1000a.cc  training1020a.cc  training1023a.cc  training1032b.cc  training1037b.cc  training1037c.cc  training1040b.cc  training1042a.cc  training1043b.cc  training1055b.cc  training1059b.cc  training1061a.cc  (+32 more)
ap/leetcode/: 000_problem_pool.md  001_yandex_list.md  238_product_of_array_except_self.cc  lc007.cc  lc856.cc  readme.md
codeforces/: .gitignore
codeforces/manthan_codefest_17/: ring.cc
codeforces/tennis_tournament/: SConstruct  main.cc
codeforces/yandex_test/: input.txt  output.txt
educational/__graduation_work2__/: .gitignore  main.cc
educational/algorithms-cpp/: Makefile  OldMatrix.cpp  matrix  (+4 more)
jumble/grpc/rust-to-java/: Cargo.toml  build.rs
jumble/grpc/rust-to-java/proto/: HelloService.proto
jumble/grpc/rust-to-java/src/: main.rs
jumble/grpc/rust-tonic/: Cargo.toml  build.rs
jumble/grpc/rust-tonic/proto/: hello.proto
jumble/grpc/rust-tonic/src/: client.rs  server.rs
reading/: 00_books_pool.md
(+966 files in other folders)
