[package]
name = "rust-tonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8.2"
prost = "0.11"
tokio = { version = "1.23.1", features = ["macros", "rt-multi-thread"]}

[build-dependencies]
tonic-build = "0.8.2"

# server binary
[[bin]]
    name = "server"
    path = "src/server.rs"

# client binary
[[bin]]
    name = "client"
    path = "src/client.rs"
